--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/registro_titulo"
-        android:textSize="30sp"
+        android:textSize="@dimen/titulo"
+        android:textColor="@color/titulo"
         android:textStyle="bold" />
 
     <TextView
@@ -20,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/registro_nombre"
-        android:textSize="24sp" />
+        android:textColor="@color/etiqueta"
+        android:textSize="@dimen/etiquetas" />
 
     <EditText
         android:id="@+id/regNombre"
@@ -33,8 +35,9 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/etiqueta"
         android:text="@string/registro_clave"
-        android:textSize="24sp" />
+        android:textSize="@dimen/etiquetas" />
 
     <EditText
         android:id="@+id/regClave"
@@ -48,7 +51,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/registro_clave2"
-        android:textSize="24sp" />
+        android:textColor="@color/etiqueta"
+        android:textSize="@dimen/etiquetas" />
 
     <EditText
         android:id="@+id/editText2"
@@ -62,7 +66,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/registro_correo"
-        android:textSize="24dp" />
+        android:textColor="@color/etiqueta"
+        android:textSize="@dimen/etiquetas" />
 
     <EditText
         android:id="@+id/regMail"
@@ -76,7 +81,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/registro_tarjeta"
-        android:textSize="24dp" />
+        android:textColor="@color/etiqueta"
+        android:textSize="@dimen/etiquetas" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,7 +96,9 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="numero" />
+            android:maxLength="16"
+            android:numeric="decimal"
+            android:text="Numero" />
 
         <EditText
             android:id="@+id/editText6"
@@ -99,7 +107,9 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:maxLength="3"
+            android:numeric="decimal"
+            android:text="CCV" />
 
         <EditText
             android:id="@+id/editText7"
@@ -108,42 +118,119 @@
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Name" />
+            android:text="MM/AA" />
 
     </LinearLayout>
 
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="98dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+            android:layout_width="103dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:text="Tipo de Cuenta" />
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/optBase"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="RadioButton" />
+            android:text="Base" />
 
         <RadioButton
-            android:id="@+id/radioButton4"
+            android:id="@+id/optPremium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="RadioButton" />
+            android:text="Premium" />
 
         <RadioButton
-            android:id="@+id/radioButton5"
+            android:id="@+id/optFull"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="RadioButton" />
+            android:text="Full" />
+
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/etiqueta"
+        android:text="@string/registro_credito" />
+
+    <SeekBar
+        android:id="@+id/regCredito"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="1500" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/registro_notificar" />
+
+    <ToggleButton
+        android:id="@+id/optNotificarMail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="NO ENVIAR NOTIFICACIONES AL MAIL" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/registro_vendedor" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="92dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registro_ctaalia" />
+
+        <EditText
+            android:id="@+id/ctaAlias"
+            android:layout_width="match_parent"
+            android:layout_height="29dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/registro_ctaalias" />
+
+        <EditText
+            android:id="@+id/ctaCBU"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+    </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/aceptaCondiciones"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text='"Acepta terminos y condiciones"' />
+
+    <Button
+        android:id="@+id/btnRegistrar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Registrar" />
 
 </LinearLayout>
