--- a/app/src/main/res/values/dimensiones.xml
+++ b/app/src/main/res/values/dimensiones.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="titulo">32sp</dimen>
-    <dimen name="etiqueta">16sp</dimen>
-
+    <dimen name="titulo">32dp</dimen>
+    <dimen name="etiqueta">16dp</dimen>
 </resources>
