--- a/app/src/main/res/layout/mi_toolbar.xml
+++ b/app/src/main/res/layout/mi_toolbar.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
+<androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:title="Menu Principal"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:minHeight="?attr/actionBarSize"
@@ -10,4 +11,4 @@
     android:theme="@style/AppTheme"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
 
-</android.support.v7.widget.Toolbar>
+</androidx.appcompat.widget.Toolbar>
