--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent" android:layout_height="match_parent">
+
+
+<include
+    android:id="@+id/appbar"
+    layout="@layout/mi_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".home">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    />
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="184dp"
-        tools:layout_editor_absoluteY="184dp">
-
-        <include android:id="@+id/appbar"
-            layout="@layout/mi_toolbar" />
-
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+    android:text="Bienvenidos"
+    ></TextView>
+</RelativeLayout>
