--- a/app/src/main/res/layout/mi_toolbar.xml
+++ b/app/src/main/res/layout/mi_toolbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
+<androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
@@ -8,6 +8,7 @@
     android:background="?attr/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/AppTheme"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    app:title="Menu Principal">
 
-</android.support.v7.widget.Toolbar>
+</androidx.appcompat.widget.Toolbar>
