--- a/app/src/main/res/menu/items_act2.xml
+++ b/app/src/main/res/menu/items_act2.xml
@@ -4,23 +4,23 @@
         xmlns:tools="http://schemas.android.com/tools"
         tools:context=".home">
         <item   android:id="@+id/mnuOpt1"
-            android:title="menu_opcion1"
+            android:title="@string/Item_Registrame"
             android:actionLayout="@drawable/shopping"
-            android:orderInCategory="3"
-            app:showAsAction="never">
-
-        </item>
-
-        <item   android:id="@+id/mnuOpt2"
-            android:title="menu_opcion2"
             android:orderInCategory="1"
             app:showAsAction="never">
 
         </item>
 
-        <item   android:id="@+id/mnuOpt5"
-            android:title="menu_opcion5"
+        <item   android:id="@+id/mnuOpt2"
+            android:title="@string/Item_Crear"
             android:orderInCategory="2"
+            app:showAsAction="never">
+
+        </item>
+
+        <item   android:id="@+id/mnuOpt3"
+            android:title="@string/Item_Listar"
+            android:orderInCategory="3"
             app:showAsAction="never">
 
         </item>
