--- a/app/src/main/res/menu/item_volver_plato.xml
+++ b/app/src/main/res/menu/item_volver_plato.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".CrearItem">
 
     <item   android:id="@+id/volver"
         android:title="@string/Item_Volver"
@@ -11,5 +11,4 @@
         android:icon="@drawable/ic_chevron_left_black_24dp"
         app:showAsAction="always">
     </item>
-
 </menu>
