--- a/app/src/main/res/layout/activity_lista_plato.xml
+++ b/app/src/main/res/layout/activity_lista_plato.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Lista_plato">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_platos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,4 +15,15 @@
         android:scrollbars="vertical"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:text="LISTAR PLATOS"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20dp"
+        android:textAlignment="center"
+        android:textAppearance="@style/Theme.AppCompat.Light.Dialog"
+        ></TextView>
 </RelativeLayout>
