--- a/app/src/main/res/layout/fila_plato.xml
+++ b/app/src/main/res/layout/fila_plato.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="16dp"
+    android:id="@+id/cv"
     >
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cv"
-        >
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,6 +41,4 @@
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+    </androidx.cardview.widget.CardView>
