--- a/app/src/main/res/layout/activity_lista_plato.xml
+++ b/app/src/main/res/layout/activity_lista_plato.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Lista_plato">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_platos"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+    <include
+        android:id="@+id/appbar"
+        layout="@layout/mi_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="4dp"
-        android:scrollbars="vertical"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="LISTAR PLATOS"
-        android:textColor="@color/colorPrimary"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:textAppearance="@style/Theme.AppCompat.Light.Dialog"
-        ></TextView>
-</RelativeLayout>
+        android:text="Lista de Platos"
+        android:textColor="@color/titulo_"
+        android:textSize="@dimen/titulo"
+        android:textStyle="bold" />
+
+<androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_platos"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="4dp"
+    android:scrollbars="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
+
+</LinearLayout>
