--- a/app/src/main/res/menu/items_act2.xml
+++ b/app/src/main/res/menu/items_act2.xml
@@ -24,4 +24,11 @@
             app:showAsAction="never">
 
         </item>
+
+        <item  android:id="@+id/mnuOpt4"
+        android:title="@string/Buscar_Plato"
+        android:orderInCategory="4"
+        app:showAsAction="never">
+
+        </item>
     </menu>
