Etapa 4 - 12/11 - Eliminar plato no anda

--- a/app/src/main/res/layout/fila_plato.xml
+++ b/app/src/main/res/layout/fila_plato.xml
@@ -84,7 +84,7 @@
                 android:id="@+id/selecPlato"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/btnElimnar"
+                android:layout_toRightOf="@+id/id_plato"
                 android:text="" />
 
         </RelativeLayout>
